[project]
name = "market-making-system"
version = "0.1.0"
description = "Non-directional liquidity capture and market-making for Polymarket"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "py-clob-client>=0.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.5",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-telegram-bot>=21.0",
    "web3>=6.15",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.8"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
